<resources>
    <string name="app_name">SmartTrekk</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo o nombre de usuario</string>
    <string name="welcome">Bienvenido</string>
    <string name="register_welcome">Registro</string>
    <string name="action_register">¿No tienes una cuenta? Registrate</string>
    <string name="action_login">¿Ya tienes una cuenta? Ingresa</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_fullname">Nombre Completo</string>
    <string name="prompt_email_register">Correo electrónico</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_amigos">Amigos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_error_toast">Error al registrar</string>
</resources>
