<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bglogin"
    tools:context="com.example.jack.smarttreck.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/register_welcome"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="30dp" />

            <EditText
                android:id="@+id/fullname"
                android:theme="@style/MyEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_fullname"
                android:textColorHint="@color/white"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:singleLine="true" />

            <EditText
                android:id="@+id/nick"
                android:theme="@style/MyEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nombre de usuario"
                android:textColorHint="@color/white"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:singleLine="true" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyEditTextTheme"
                android:hint="@string/prompt_email_register"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/white"
                android:maxLines="1"
                android:textColor="@color/white"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:theme="@style/MyEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Contraseña"
                android:textColorHint="@color/white"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:singleLine="true" />

            <EditText
                android:id="@+id/retype_password"
                android:theme="@style/MyEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Contraseña nuevamente"
                android:textColorHint="@color/white"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:singleLine="true" />

            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_form"
                android:textColor="@color/white"
                android:text="Registrar"
                android:fontFamily="sans-serif-light"
                android:textStyle="normal"
                android:elevation="2dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/action_login"
                />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
